; ModuleID = '/home/carl/AnghaBench/libgit2/tests/message/extr_trailer.c_test_message_trailer__simple.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/message/extr_trailer.c_test_message_trailer__simple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i8* }

@.str = private unnamed_addr constant [14 x i8] c"Signed-off-by\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"foo@bar.com\00", align 1
@.str.2 = private unnamed_addr constant [17 x i8] c"someone@else.com\00", align 1
@.str.3 = private unnamed_addr constant [69 x i8] c"Message\0A\0ASigned-off-by: foo@bar.com\0ASigned-off-by: someone@else.com\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_message_trailer__simple() #0 {
  %1 = alloca [3 x %struct.TYPE_3__], align 16
  %2 = bitcast [3 x %struct.TYPE_3__]* %1 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %2, i8 0, i64 48, i1 false)
  %3 = bitcast i8* %2 to [3 x %struct.TYPE_3__]*
  %4 = getelementptr inbounds [3 x %struct.TYPE_3__], [3 x %struct.TYPE_3__]* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i32 0, i32 0), i8** %5, align 16
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i32 0, i32 0), i8** %6, align 8
  %7 = getelementptr inbounds [3 x %struct.TYPE_3__], [3 x %struct.TYPE_3__]* %3, i32 0, i32 1
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i32 0, i32 0), i8** %8, align 16
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i32 0, i32 0), i8** %9, align 8
  %10 = getelementptr inbounds [3 x %struct.TYPE_3__], [3 x %struct.TYPE_3__]* %1, i64 0, i64 0
  %11 = call i32 @assert_trailers(i8* getelementptr inbounds ([69 x i8], [69 x i8]* @.str.3, i64 0, i64 0), %struct.TYPE_3__* %10)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @assert_trailers(i8*, %struct.TYPE_3__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
